<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/news_bottom_navbar"
        android:icon="@drawable/ic_outline_web_asset"
        android:orderInCategory="1"
        android:title="@string/news" />

    <item
        android:id="@+id/search_bottom_navbar"
        android:icon="@drawable/ic_outline_search"
        android:orderInCategory="2"
        android:title="@string/search" />

    <item
        android:id="@+id/message_bottom_navbar"
        android:icon="@drawable/ic_outline_chat"
        android:orderInCategory="3"
        android:title="@string/message" />

    <item
        android:id="@+id/notifications_bottom_navbar"
        android:icon="@drawable/ic_outline_notifications"
        android:orderInCategory="4"
        android:title="@string/notification" />

    <item
        android:id="@+id/menu_bottom_navbar"
        android:icon="@drawable/ic_outline_menu"
        android:orderInCategory="5"
        android:title="@string/menu" />
</menu>