<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_root_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/main_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/main_bottom_navbar"
        android:layout_below="@id/main_toolbar"
        android:layout_alignTop="@id/main_toolbar"
        android:fillViewport="true"
        tools:context=".androidui.vk.VkProfileActivity">

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray300">

            <RelativeLayout
                android:id="@+id/user_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white">

                <ImageView
                    android:id="@+id/main_foto_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/MAIN_IMG_SIZE"
                    android:src="@drawable/vk_profile_bg" />


                <TextView
                    android:id="@+id/main_user_name_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/main_foto_image_view"
                    android:layout_marginStart="@dimen/TWO_INTENT"
                    android:layout_marginBottom="@dimen/FIVE_INTENT"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:textSize="@dimen/L_TEXT_SIZE"
                    app:fontFamily="@font/montserrat_medium" />

                <TextView
                    android:id="@+id/main_status_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/main_foto_image_view"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="@dimen/TWO_INTENT"
                    android:layout_marginBottom="@dimen/THREE_INTENT"
                    android:text="@string/online"
                    android:textColor="@color/white"
                    android:textSize="@dimen/XS_TEXT_SIZE"
                    app:fontFamily="@font/montserrat_medium" />

                <ImageView
                    android:id="@+id/main_status_icon_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/main_status_text_view"
                    android:layout_toEndOf="@id/main_status_text_view"
                    android:src="@drawable/ic_outline_smartphone" />

                <ImageView
                    android:id="@+id/main_foto_icon_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@id/main_foto_image_view"
                    android:layout_alignBottom="@id/main_foto_image_view"
                    android:layout_marginEnd="@dimen/TWO_INTENT"
                    android:layout_marginBottom="@dimen/THREE_INTENT"
                    app:srcCompat="@drawable/ic_photo_camera" />

                <Button
                    android:id="@+id/main_edit_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_foto_image_view"
                    android:layout_marginStart="@dimen/TWO_INTENT"
                    android:layout_marginTop="@dimen/ONE_INTENT"
                    android:layout_marginEnd="@dimen/TWO_INTENT"
                    android:layout_marginBottom="@dimen/ONE_INTENT"
                    android:background="@drawable/edit_button"
                    android:gravity="center"
                    android:paddingTop="@dimen/ONE_INTENT"
                    android:paddingBottom="@dimen/ONE_INTENT"
                    android:text="@string/edit"
                    android:textAllCaps="false"
                    android:textColor="@color/lightBlue900"
                    android:textSize="@dimen/XS_TEXT_SIZE"
                    app:fontFamily="@font/montserrat_medium" />

                <ImageView
                    android:id="@+id/main_chat_icon_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_edit_text_view"
                    android:layout_marginStart="@dimen/TWO_INTENT"
                    android:layout_marginTop="@dimen/ONE_INTENT"
                    app:srcCompat="@drawable/ic_message" />

                <TextView
                    android:id="@+id/main_message_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_edit_text_view"
                    android:layout_marginStart="@dimen/TWO_INTENT"
                    android:layout_marginTop="@dimen/ONE_INTENT"
                    android:layout_marginEnd="@dimen/TWO_INTENT"
                    android:layout_toEndOf="@id/main_chat_icon_image_view"
                    android:text="@string/profile_msg"
                    android:textSize="@dimen/XS_TEXT_SIZE"
                    app:fontFamily="@font/montserrat_medium" />

                <ImageView
                    android:id="@+id/main_people_icon_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_chat_icon_image_view"
                    android:layout_alignTop="@id/main_friends_text_view"
                    android:layout_marginStart="@dimen/TWO_INTENT"
                    app:srcCompat="@drawable/ic_people" />

                <TextView
                    android:id="@+id/main_friends_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_message_text_view"
                    android:layout_marginStart="@dimen/TWO_INTENT"
                    android:layout_marginTop="@dimen/TWO_INTENT"
                    android:layout_marginEnd="@dimen/TWO_INTENT"
                    android:layout_toEndOf="@id/main_people_icon_image_view"
                    android:text="@string/friends"
                    android:textSize="@dimen/XS_TEXT_SIZE"
                    app:fontFamily="@font/montserrat_medium" />

                <ImageView
                    android:id="@+id/main_subscribers_icon_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_people_icon_image_view"
                    android:layout_marginStart="@dimen/TWO_INTENT"
                    android:layout_marginTop="@dimen/TWO_INTENT"
                    app:srcCompat="@drawable/ic_rss_feed" />

                <TextView
                    android:id="@+id/main_subscribers_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_friends_text_view"
                    android:layout_alignTop="@id/main_subscribers_icon_image_view"
                    android:layout_marginStart="@dimen/TWO_INTENT"
                    android:layout_toEndOf="@id/main_subscribers_icon_image_view"
                    android:text="@string/subscribers"
                    android:textSize="@dimen/XS_TEXT_SIZE"
                    app:fontFamily="@font/montserrat_medium" />

                <ImageView
                    android:id="@+id/main_location_icon_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_subscribers_icon_image_view"
                    android:layout_marginStart="@dimen/TWO_INTENT"
                    android:layout_marginTop="@dimen/TWO_INTENT"
                    app:srcCompat="@drawable/ic_home" />

                <TextView
                    android:id="@+id/main_location_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_subscribers_text_view"
                    android:layout_alignTop="@id/main_location_icon_image_view"
                    android:layout_marginStart="@dimen/TWO_INTENT"
                    android:layout_toEndOf="@id/main_location_icon_image_view"
                    android:text="@string/location"
                    android:textSize="@dimen/XS_TEXT_SIZE"
                    app:fontFamily="@font/montserrat_medium" />

                <ImageView
                    android:id="@+id/main_more_info_icon_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_location_icon_image_view"
                    android:layout_marginStart="@dimen/TWO_INTENT"
                    android:layout_marginTop="@dimen/TWO_INTENT"
                    android:layout_marginBottom="@dimen/TWO_INTENT"
                    app:srcCompat="@drawable/ic_more_horiz" />

                <TextView
                    android:id="@+id/main_more_info_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/main_location_text_view"
                    android:layout_alignTop="@id/main_more_info_icon_image_view"
                    android:layout_marginStart="@dimen/TWO_INTENT"
                    android:layout_toEndOf="@id/main_more_info_icon_image_view"
                    android:text="@string/detail_info"
                    android:textColor="@color/lightBlue900"
                    android:textSize="@dimen/XS_TEXT_SIZE"
                    app:fontFamily="@font/montserrat_medium" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/user_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_profile"
                android:layout_marginTop="@dimen/ONE_INTENT"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/main_news_icon_image_view"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="@dimen/TWO_INTENT"
                    android:layout_marginTop="@dimen/ONE_INTENT"
                    android:layout_marginBottom="@dimen/ONE_INTENT"
                    android:src="@drawable/ic_stub" />

                <TextView
                    android:id="@+id/main_news_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_alignBaseline="@id/main_news_icon_image_view"
                    android:layout_marginStart="@dimen/TWO_INTENT"
                    android:layout_marginTop="@dimen/ONE_INTENT"
                    android:layout_toEndOf="@id/main_news_icon_image_view"
                    android:text="@string/question"
                    android:textSize="@dimen/XS_TEXT_SIZE"
                    app:fontFamily="@font/montserrat_medium" />

                <ImageView
                    android:id="@+id/main_news_foto_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ONE_INTENT"
                    android:layout_marginEnd="@dimen/TWO_INTENT"
                    android:layout_toStartOf="@id/main_news_camera_image_view"
                    android:src="@drawable/ic_outline_insert_photo" />

                <ImageView
                    android:id="@+id/main_news_camera_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="@dimen/ONE_INTENT"
                    android:layout_marginEnd="@dimen/TWO_INTENT"
                    android:src="@drawable/ic_outline_local_see" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/foto_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_publisher"
                android:layout_marginTop="@dimen/ONE_INTENT"
                android:background="@color/white">

                <TextView
                    android:id="@+id/foto_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="@dimen/TWO_INTENT"
                    android:layout_marginTop="@dimen/TWO_INTENT"
                    android:text="@string/foto_label"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/foto_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="@dimen/ONE_INTENT"
                    android:layout_marginTop="@dimen/TWO_INTENT"
                    android:layout_toEndOf="@id/foto_label"
                    android:text="@string/foto_amount" />

                <HorizontalScrollView
                    android:id="@+id/main_foto_scroll_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/foto_label"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/TWO_INTENT"
                    android:layout_marginTop="@dimen/ONE_INTENT"
                    android:layout_marginBottom="@dimen/TWO_INTENT"
                    android:background="@color/white">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/first_foto"
                            android:layout_width="@dimen/foto_width"
                            android:layout_height="@dimen/foto_height"
                            android:layout_alignParentTop="true"
                            android:layout_marginEnd="@dimen/ONE_INTENT"
                            android:scaleType="centerCrop"
                            android:src="@drawable/vk_profile_bg" />

                        <ImageView
                            android:id="@+id/second_foto"
                            android:layout_width="@dimen/foto_width"
                            android:layout_height="@dimen/foto_height"
                            android:layout_alignParentTop="true"
                            android:layout_marginEnd="@dimen/ONE_INTENT"
                            android:layout_toEndOf="@id/first_foto"
                            android:scaleType="centerCrop"
                            android:src="@drawable/vk_foto_1" />

                        <ImageView
                            android:id="@+id/third_foto"
                            android:layout_width="@dimen/foto_width"
                            android:layout_height="@dimen/foto_height"
                            android:layout_alignParentTop="true"
                            android:layout_marginEnd="@dimen/ONE_INTENT"
                            android:layout_toEndOf="@id/second_foto"
                            android:scaleType="centerCrop"
                            android:src="@drawable/vk_foto_2" />

                        <ImageView
                            android:id="@+id/forth_foto"
                            android:layout_width="@dimen/foto_width"
                            android:layout_height="@dimen/foto_height"
                            android:layout_alignParentTop="true"
                            android:layout_marginEnd="@dimen/ONE_INTENT"
                            android:layout_toEndOf="@id/third_foto"
                            android:scaleType="centerCrop"
                            android:src="@drawable/vk_foto_3" />

                    </RelativeLayout>
                </HorizontalScrollView>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/main_bottom_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/gray50"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_navigation" />
</RelativeLayout>
